Closed
Bug 1339797
Opened 4 years ago
Closed 4 years ago
Using "Select all" option in Text selection menu in a text box dismisses the menu
Categories
(Firefox for Android Graveyard :: Text Selection, defect)
Tracking
(fennec+, firefox51 unaffected, firefox52+ fixed, firefox-esr52 fixed, firefox53+ verified, firefox54+ verified)
RESOLVED
FIXED
Firefox 54
People
(Reporter: kaarticsivaraam91196+bugzilla, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
mtseng
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details |
The "Select all" option in the text selection menu dismissed the menu when it is used in a text input field. Steps to reproduce: 1. Type some text in a text input field 2. Select a portion of it 3. Tap the "Select all" option from the Text selection menu Expected results: All text in text field is selected and the Text selection menu remains for using other option such as Cut, Copy etc. Actual results: All text in text field is selected but the Text selection menu is dismissed. This troubles the user as he not able to immediately cut/copy the selected text or paste text to replace the selected text.
Comment 1•4 years ago
|
||
Still working fine on Release.
tracking-fennec: --- → ?
Has Regression Range: --- → no
Has STR: --- → yes
status-firefox51:
--- → unaffected
status-firefox52:
--- → ?
status-firefox53:
--- → ?
Keywords: regression,
regressionwindow-wanted
Comment 2•4 years ago
|
||
Regression window: Last good build: 2016-10-06 First bad build: 2016-10-07 Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=777fb63db8de8d78b64b8141d1a998397275dd03&tochange=4b9944879c9a60a9aba4a744a7401bc38e0f39c4
Keywords: regressionwindow-wanted
Comment 3•4 years ago
|
||
[Tracking Requested - why for this release]: Regression in Fx 52 Bug 1235513 seems like a good candidate.
Blocks: 1235513
Has Regression Range: no → yes
tracking-firefox52:
--- → ?
tracking-firefox53:
--- → ?
tracking-firefox54:
--- → ?
Flags: needinfo?(bugmail)
Comment 4•4 years ago
|
||
Bug 1307252 is an even better one - verified by testing the relevant autoland builds.
Comment 5•4 years ago
|
||
Tracking 52/53/54 for this user facing regression.
Assignee | ||
Comment 6•4 years ago
|
||
Thank you all for reporting this bug, and find the regression bug. I'll fix this.
Assignee: nobody → tlin
Status: NEW → ASSIGNED
Flags: needinfo?(tlin)
Comment hidden (mozreview-request) |
Comment 8•4 years ago
|
||
mozreview-review |
Comment on attachment 8838413 [details] Bug 1339797 - Fix select-all events fired by touch incorrectly hide the carets. https://reviewboard.mozilla.org/r/113338/#review114818
Attachment #8838413 -
Flags: review?(mtseng) → review+
Assignee | ||
Updated•4 years ago
|
Blocks: AccessibleCaret
Pushed by tlin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fe7a3aa27666 Fix select-all events fired by touch incorrectly hide the carets. r=mtseng
Comment 10•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/fe7a3aa27666
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 54
Comment 11•4 years ago
|
||
Please request Aurora/Beta approval on this when you get a chance.
Flags: needinfo?(tlin)
Assignee | ||
Comment 12•4 years ago
|
||
Comment on attachment 8838413 [details] Bug 1339797 - Fix select-all events fired by touch incorrectly hide the carets. Approval Request Comment [Feature/Bug causing the regression]: Bug 1307252. [User impact if declined]: If declined, after clicking "SELECT ALL" on the toolbar in a input field (like Google Search), the carets and toolbar will disappear. [Is this code covered by automated tests?]: No. [Has the fix been verified in Nightly?]: I've verified on Nightly (2017-02-18). [Needs manual test from QE? If yes, steps to reproduce]: It would be good to double check by QE. See comment 0 for the steps. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: Low. [Why is the change risky/not risky?]: Simple one line change, which affects only the select all logic. [String changes made/needed]: None.
Flags: needinfo?(tlin)
Attachment #8838413 -
Flags: approval-mozilla-beta?
Attachment #8838413 -
Flags: approval-mozilla-aurora?
Comment 13•4 years ago
|
||
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(brindusa.tot)
Comment 14•4 years ago
|
||
Hi, Verified as fixed in latest Nightly build (2017-02-19); Device: Nexus 9 (Android 7.1). After clicking "SELECT ALL" on the toolbar in a input field, the carets and toolbar is still displayed.
Flags: needinfo?(brindusa.tot)
Comment 15•4 years ago
|
||
Comment on attachment 8838413 [details] Bug 1339797 - Fix select-all events fired by touch incorrectly hide the carets. Fix a UI issue and was verified. Aurora53+.
Attachment #8838413 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 16•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/86de27eb78e3
Comment 17•4 years ago
|
||
Comment on attachment 8838413 [details] Bug 1339797 - Fix select-all events fired by touch incorrectly hide the carets. let's get this regression fix in the next beta build.
Attachment #8838413 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 18•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/396f58f0d63c
Comment 19•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-esr52/rev/396f58f0d63c
status-firefox-esr52:
--- → fixed
Updated•4 years ago
|
tracking-fennec: ? → +
Comment 20•4 years ago
|
||
Verified as fixed in build 53.0a2 (2017-02-22); Device: LG G4 (Android 6.0.1).
Updated•28 days ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•