Bug 1339797 - Fix select-all events fired by touch incorrectly hide the carets. r=mtseng a=gchang

sHideCaretsForMouseInput is default to true on all platforms. When clicking
"SELECT ALL" on Fennec toolbar in <input>, AccessibleCaretManager will
receive SELECTALL_REASON with MOZ_SOURCE_TOUCH.

We should hide the carets only if the select-all reason is fired by
keyboard, not by touch.

MozReview-Commit-ID: D7FYIH5ZGS0

--HG--
extra : source : fe7a3aa276667da3aea1427f05ec888ddbfc6475